Don't update node positions and nodes in ways in vector dataset
This can cause issues where a visible node cannot be clicked since it
does not exist in the dataset.

In addition, some lint issues have been fixed.

Signed-off-by: Taylor Smock <tsmock@meta.com>